# dsRAG

./: .env.example  AZURE_INTEGRATION_SUMMARY.md  AZURE_VLM_ADDITION.md  pyproject.toml  run_azure_tests.py
docs/: azure-quick-reference.md  azure-testing-guide.md  azure-vlm-quickstart.md
dsrag/: __init__.py  embedding.py  llm.py  reranker.py
dsrag/azure/: README.md  __init__.py  azure_cohere_reranker.py  azure_openai_chat.py  azure_openai_embedding.py  azure_openai_vlm.py  blob_storage.py
dsrag/chat/: instructor_get_response.py  model_names.py
dsrag/dsparse/file_parsing/: vlm.py  vlm_file_parsing.py
dsrag/dsparse/sectioning_and_chunking/: semantic_sectioning.py
examples/: azure_cohere_example.py  azure_example.py
notebooks/: chat_thread_db.json  quickstart.ipynb
notebooks/axa-uw/chunk_storage/: axa-uw.pkl
notebooks/axa-uw/metadata/: axa-uw.json
notebooks/axa-uw/page_images/axa-uw/axa-uw.pdf/: elements.json  page_content_1.json  page_content_2.json  page_content_3.json  page_content_4.json  page_content_5.json  page_content_6.json  page_content_7.json  page_content_8.json
notebooks/axa-uw/vector_storage/: axa-uw.pkl
tests/integration/: test_azure_integration.py
tests/unit/: test_azure_blob_storage.py
