[project]
name = "dsrag"
version = "0.5.3"
description = "State-of-the-art RAG pipeline from D-Star AI"
authors = [
    { name = "Zach McCormick", email = "zach@d-star.ai" },
    { name = "Nick McCormick", email = "nick@d-star.ai" },
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "langchain-text-splitters>=0.3.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.8.2",
    "numpy>=1.20.0",
    "pandas>=2.0.0",
    "tiktoken>=0.5.0",
    "tqdm>=4.65.0",
    "requests>=2.30.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.5.0",
    "instructor>=1.7.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.2.0",
    "pillow>=10.0.0",
    "pdf2image>=1.16.0",
    "docx2txt>=0.8",
    "PyPDF2>=3.0.1",
    "ipywidgets>=8.1.7",
    "ipykernel>=6.29.5",
    "google-generativeai>=0.8.5",
    "cohere>=5.15.0",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.8.0"]
chroma = ["chromadb>=0.5.5"]
weaviate = ["weaviate-client>=4.6.0"]
qdrant = ["qdrant-client>=1.8.0"]
milvus = ["pymilvus>=2.3.5"]
pinecone = ["pinecone>=3.0.0"]
postgres = [
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.2.0",
]
boto3 = ["boto3>=1.28.0"]
openai = ["openai>=1.52.2"]
cohere = ["cohere>=4.0.0"]
voyageai = ["voyageai>=0.1.0"]
ollama = ["ollama>=0.1.0"]
anthropic = ["anthropic>=0.37.1"]
google-generativeai = ["google-generativeai>=0.8.3"]
all-dbs = ["dsrag[faiss,chroma,weaviate,qdrant,milvus,pinecone,postgres,boto3]"]
all-models = ["dsrag[openai,cohere,voyageai,ollama,anthropic,google-generativeai]"]
all = ["dsrag[all-dbs,all-models]"]

[project.urls]
Homepage = "https://github.com/D-Star-AI/dsRAG"
Documentation = "https://github.com/D-Star-AI/dsRAG"
Contact = "https://github.com/D-Star-AI/dsRAG"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = false

[tool.setuptools.packages.find]
where = ["."]
include = ["dsrag", "dsrag.*"]
exclude = ["dsrag.dsparse.tests", "dsrag.dsparse.tests.*", "dsrag.dsparse.dist", "dsrag.dsparse.dist.*"]
